[package]
name = "sthal_to_cpp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clang = { version = "2.0.0", features = ["clang_10_0"] }
clap = { version = "4.5.6", features = ["cargo", "derive"] }
convert_case = "0.6.0"
fxhash = "0.2.1"
glob = "0.3.1"
itertools = "0.13.0"
lang-c = "0.15.1"
rayon = "1.10.0"
smallvec = "1.13.2"
